syntax = "proto3";

package front.admin.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/front/admin/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "订单相关";
    version: "1.0";
  };
};

message OrderAddReq {
  int64       memberId = 2;
  int64       couponId = 3;
  string      orderSn = 4;
  string   createTime = 5;
  string      memberUsername = 6;
  double     totalAmount = 7;
  double     payAmount = 8;
  double     freightAmount = 9;
  double     promotionAmount = 10;
  double     integrationAmount = 11;
  double     couponAmount = 12;
  double     discountAmount = 13;
  int64       payType = 14;
  int64       sourceType = 15;
  int64       status = 16;
  int64       orderType = 17;
  string      deliveryCompany = 18;
  string      deliverySn = 19;
  int64       autoConfirmDay = 20;
  int64       integration = 21;
  int64       growth = 22;
  string      promotionInfo = 23;
  int64       billType = 24;
  string      billHeader = 25;
  string      billContent = 26;
  string      billReceiverPhone = 27;
  string      billReceiverEmail = 28;
  string      receiverName = 29;
  string      receiverPhone = 30;
  string      receiverPostCode = 31;
  string      receiverProvince = 32;
  string      receiverCity = 33;
  string      receiverRegion = 34;
  string      receiverDetailAddress = 35;
  string      note = 36;
  int64       confirmStatus = 37;
  int64       deleteStatus = 38;
  int64       useIntegration = 39;
  string   paymentTime = 40;
  string   deliveryTime = 41;
  string   receiveTime = 42;
  string   commentTime = 43;
  string   modifyTime = 44;
}

message OrderAddResp {
  string pong = 1;
}

message OrderListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderListData{
  int32       id = 1;
  int32       memberId = 2;
  int32       couponId = 3;
  string      orderSn = 4;
  string   createTime = 5;
  string      memberUsername = 6;
  double     totalAmount = 7;
  double     payAmount = 8;
  double     freightAmount = 9;
  double     promotionAmount = 10;
  double     integrationAmount = 11;
  double     couponAmount = 12;
  double     discountAmount = 13;
  int32       payType = 14;
  int32       sourceType = 15;
  int32       status = 16;
  int32       orderType = 17;
  string      deliveryCompany = 18;
  string      deliverySn = 19;
  int32       autoConfirmDay = 20;
  int32       integration = 21;
  int32       growth = 22;
  string      promotionInfo = 23;
  int32       billType = 24;
  string      billHeader = 25;
  string      billContent = 26;
  string      billReceiverPhone = 27;
  string      billReceiverEmail = 28;
  string      receiverName = 29;
  string      receiverPhone = 30;
  string      receiverPostCode = 31;
  string      receiverProvince = 32;
  string      receiverCity = 33;
  string      receiverRegion = 34;
  string      receiverDetailAddress = 35;
  string      note = 36;
  int32       confirmStatus = 37;
  int32       deleteStatus = 38;
  int32       useIntegration = 39;
  string   paymentTime = 40;
  string   deliveryTime = 41;
  string   receiveTime = 42;
  string   commentTime = 43;
  string   modifyTime = 44;
}

message OrderListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  OrderListData data = 6;
  bool success = 7;
}

message OrderUpdateReq {
  int64       id = 1;
  int64       memberId = 2;
  int64       couponId = 3;
  string      orderSn = 4;
  string      createTime = 5;
  string      memberUsername = 6;
  double     totalAmount = 7;
  double     payAmount = 8;
  double     freightAmount = 9;
  double     promotionAmount = 10;
  double     integrationAmount = 11;
  double     couponAmount = 12;
  double     discountAmount = 13;
  int64       payType = 14;
  int64       sourceType = 15;
  int64       status = 16;
  int64       orderType = 17;
  string      deliveryCompany = 18;
  string      deliverySn = 19;
  int64       autoConfirmDay = 20;
  int64       integration = 21;
  int64       growth = 22;
  string      promotionInfo = 23;
  int64       billType = 24;
  string      billHeader = 25;
  string      billContent = 26;
  string      billReceiverPhone = 27;
  string      billReceiverEmail = 28;
  string      receiverName = 29;
  string      receiverPhone = 30;
  string      receiverPostCode = 31;
  string      receiverProvince = 32;
  string      receiverCity = 33;
  string      receiverRegion = 34;
  string      receiverDetailAddress = 35;
  string      note = 36;
  int64       confirmStatus = 37;
  int64       deleteStatus = 38;
  int64       useIntegration = 39;
  string   paymentTime = 40;
  string   deliveryTime = 41;
  string   receiveTime = 42;
  string   commentTime = 43;
  string   modifyTime = 44;
}

message OrderUpdateResp {
  string pong = 1;
}

message OrderDeleteReq {
  int64 id = 1;
}

message OrderDeleteResp {
  string pong = 1;
}

message CartItemAddReq {
  int64      productId = 2;
  int64      productSkuId = 3;
  int64      memberId = 4;
  int64      quantity = 5;
  int64    price = 6;
  string      productPic = 7;
  string      productName = 8;
  string      productSubTitle = 9;
  string      productSkuCode = 10;
  string      memberNickname = 11;
  string  createDate = 12;
  string  modifyDate = 13;
  int64      DeleteStatus = 14;
  int64      productCategoryId = 15;
  string      productBrand = 16;
  string      productSn = 17;
  string      productAttr = 18;
}

message CartItemAddResp {
  string pong = 1;
}

message CartItemListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CartItemListData{
  int32      id = 1;
  int32      productId = 2;
  int32      productSkuId = 3;
  int32      memberId = 4;
  int32      quantity = 5;
  int32    price = 6;
  string      productPic = 7;
  string      productName = 8;
  string      productSubTitle = 9;
  string      productSkuCode = 10;
  string      memberNickname = 11;
  string  createDate = 12;
  string  modifyDate = 13;
  int32      DeleteStatus = 14;
  int32      productCategoryId = 15;
  string      productBrand = 16;
  string      productSn = 17;
  string      productAttr = 18;
}

message CartItemListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  CartItemListData data = 6;
  bool success = 7;
}

message CartItemUpdateReq {
  int64      id = 1;
  int64      productId = 2;
  int64      productSkuId = 3;
  int64      memberId = 4;
  int64      quantity = 5;
  int64    price = 6;
  string      productPic = 7;
  string      productName = 8;
  string      productSubTitle = 9;
  string      productSkuCode = 10;
  string      memberNickname = 11;
  string  createDate = 12;
  string  modifyDate = 13;
  int64      DeleteStatus = 14;
  int64      productCategoryId = 15;
  string      productBrand = 16;
  string      productSn = 17;
  string      productAttr = 18;
}

message CartItemUpdateResp {
  string pong = 1;
}

message CartItemDeleteReq {
  int64 id = 1;
}

message CartItemDeleteResp {
  string pong = 1;
}

message CompanyAddressAddReq {
  string  addressName = 2;
  int64    SendStatus = 3;
  int64    receiveStatus = 4;
  string  Name = 5;
  string  phone = 6;
  string  province = 7;
  string    city = 8;
  string  region = 9;
  string  DetailAddress = 10;
}

message CompanyAddressAddResp {
  string pong = 1;
}

message CompanyAddressListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CompanyAddressListData{
  int32    id = 1;
  string  addressName = 2;
  int32    SendStatus = 3;
  int32    receiveStatus = 4;
  string  Name = 5;
  string  phone = 6;
  string  province = 7;
  string    city = 8;
  string  region = 9;
  string  DetailAddress = 10;
}

message CompanyAddressListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  CompanyAddressListData data = 6;
  bool success = 7;
}

message CompanyAddressUpdateReq {
  int64    id = 1;
  string  addressName = 2;
  int64    SendStatus = 3;
  int64    receiveStatus = 4;
  string  Name = 5;
  string  phone = 6;
  string  province = 7;
  string    city = 8;
  string  region = 9;
  string  DetailAddress = 10;
}

message CompanyAddressUpdateResp {
  string pong = 1;
}

message CompanyAddressDeleteReq {
  int64 id = 1;
}

message CompanyAddressDeleteResp {
  string pong = 1;
}

message OrderItemAddReq {
  int64      orderId = 2;
  string    orderSn = 3;
  int64    productId = 4;
  string    productPic = 5;
  string    productName = 6;
  string    productBrand = 7;
  string    productSn = 8;
  int64  productPrice = 9;
  int64    productQuantity = 10;
  int64    productSkuId = 11;
  string    productSkuCode = 12;
  int64    productCategoryId = 13;
  string    promotionName = 14;
  int64  promotionAmount = 15;
  int64    couponAmount = 17;
  int64  integrationAmount = 18;
  int64  realAmount = 19;
  int64    giftIntegration = 20;
  int64    giftGrowth = 21;
  string    productAttr = 22;
}

message OrderItemAddResp {
  string pong = 1;
}

message OrderItemListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderItemListData{
  int32    id = 1;
  int32      orderId = 2;
  string    orderSn = 3;
  int32    productId = 4;
  string    productPic = 5;
  string    productName = 6;
  string    productBrand = 7;
  string    productSn = 8;
  int32  productPrice = 9;
  int32    productQuantity = 10;
  int32    productSkuId = 11;
  string    productSkuCode = 12;
  int32    productCategoryId = 13;
  string    promotionName = 14;
  int32  promotionAmount = 15;
  int32    couponAmount = 17;
  int32  integrationAmount = 18;
  int32  realAmount = 19;
  int32    giftIntegration = 20;
  int32    giftGrowth = 21;
  string    productAttr = 22;
}

message OrderItemListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  OrderItemListData data = 6;
  bool success = 7;
}

message OrderItemUpdateReq {
  int64    id = 1;
  int64      orderId = 2;
  string    orderSn = 3;
  int64    productId = 4;
  string    productPic = 5;
  string    productName = 6;
  string    productBrand = 7;
  string    productSn = 8;
  int64  productPrice = 9;
  int64    productQuantity = 10;
  int64    productSkuId = 11;
  string    productSkuCode = 12;
  int64    productCategoryId = 13;
  string    promotionName = 14;
  int64  promotionAmount = 15;
  int64    couponAmount = 17;
  int64  integrationAmount = 18;
  int64  realAmount = 19;
  int64    giftIntegration = 20;
  int64    giftGrowth = 21;
  string    productAttr = 22;
}

message OrderItemUpdateResp {
  string pong = 1;
}

message OrderItemDeleteReq {
  int64 id = 1;
}

message OrderItemDeleteResp {
  string pong = 1;
}

message OrderOperateHistoryAddReq {
  int64      orderId = 2;
  string      operateMan = 3;
  string  createTime = 4;
  int64      orderStatus = 5;
  string    Note = 6;
}

message OrderOperateHistoryAddResp {
  string pong = 1;
}

message OrderOperateHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderOperateHistoryListData{
  int32      id = 1;
  int32      orderId = 2;
  string      operateMan = 3;
  string  createTime = 4;
  int32      orderStatus = 5;
  string    Note = 6;
}

message OrderOperateHistoryListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  OrderOperateHistoryListData data = 6;
  bool success = 7;
}

message OrderOperateHistoryUpdateReq {
  int64      id = 1;
  int64      orderId = 2;
  string      operateMan = 3;
  string  createTime = 4;
  int64      orderStatus = 5;
  string    Note = 6;
}

message OrderOperateHistoryUpdateResp {
  string pong = 1;
}

message OrderOperateHistoryDeleteReq {
  int64 id = 1;
}

message OrderOperateHistoryDeleteResp {
  string pong = 1;
}

message OrderReturnApplyAddReq {
  int64        orderId = 2;
  int64        companyAddressId = 3;
  int64      productId = 4;
  string      orderSn = 5;
  string  createTime = 6;
  string      memberUsername = 7;
  int64    returnAmount = 8;
  string      returnName = 9;
  string      returnPhone = 10;
  int64      Status = 11;
  string  handleTime = 12;
  string      productPic = 13;
  string      productName = 14;
  string      productBrand = 15;
  string      productAttr = 16;
  int64      productCount = 17;
  int64    productPrice = 18;
  int64    productRealPrice = 19;
  string      reason = 20;
  string      Description = 21;
  string      proofPics = 22;
  string      handleNote = 23;
  string      handleMan = 24;
  string      receiveMan = 25;
  string  receiveTime = 26;
  string      receiveNote = 27;
}

message OrderReturnApplyAddResp {
  string pong = 1;
}

message OrderReturnApplyListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderReturnApplyListData{
  int32      id = 1;
  int32        orderId = 2;
  int32        companyAddressId = 3;
  int32      productId = 4;
  string      orderSn = 5;
  string  createTime = 6;
  string      memberUserName = 7;
  int32    returnAmount = 8;
  string      returnName = 9;
  string      returnPhone = 10;
  int32      Status = 11;
  string  handleTime = 12;
  string      productPic = 13;
  string      productName = 14;
  string      productBrand = 15;
  string      productAttr = 16;
  int32      productCount = 17;
  int32    productPrice = 18;
  int32    productRealPrice = 19;
  string      reason = 20;
  string      Description = 21;
  string      proofPics = 22;
  string      handleNote = 23;
  string      handleMan = 24;
  string      receiveMan = 25;
  string  receiveTime = 26;
  string      receiveNote = 27;
}

message OrderReturnApplyListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  OrderReturnApplyListData data = 6;
  bool success = 7;
}

message OrderReturnApplyUpdateReq {
  int64      id = 1;
  int64        orderId = 2;
  int64        companyAddressId = 3;
  int64      productId = 4;
  string      orderSn = 5;
  string  createTime = 6;
  string      memberUsername = 7;
  int64    returnAmount = 8;
  string      returnName = 9;
  string      returnPhone = 10;
  int64      Status = 11;
  string  handleTime = 12;
  string      productPic = 13;
  string      productName = 14;
  string      productBrand = 15;
  string      productAttr = 16;
  int64      productCount = 17;
  int64    productPrice = 18;
  int64    productRealPrice = 19;
  string      reason = 20;
  string      Description = 21;
  string      proofPics = 22;
  string      handleNote = 23;
  string      handleMan = 24;
  string      receiveMan = 25;
  string  receiveTime = 26;
  string      receiveNote = 27;
}

message OrderReturnApplyUpdateResp {
  string pong = 1;
}

message OrderReturnApplyDeleteReq {
  int64 id = 1;
}

message OrderReturnApplyDeleteResp {
  string pong = 1;
}


message OrderReturnReasonAddReq {
  string      name = 2;
  int64      sort = 3;
  int64      status = 4;
  string  createTime = 5;
}

message OrderReturnReasonAddResp {
  string pong = 1;
}

message OrderReturnReasonListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderReturnReasonListData{
  int32      id = 1;
  string      name = 2;
  int32      sort = 3;
  int32      status = 4;
  string  createTime = 5;
}

message OrderReturnReasonListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  OrderReturnReasonListData data = 6;
  bool success = 7;
}

message OrderReturnReasonUpdateReq {
  int64      id = 1;
  string      name = 2;
  int64      sort = 3;
  int64      status = 4;
  string  createTime = 5;
}

message OrderReturnReasonUpdateResp {
  string pong = 1;
}

message OrderReturnReasonDeleteReq {
  int64 id = 1;
}

message OrderReturnReasonDeleteResp {
  string pong = 1;
}

message OrderSettingAddReq {
  int64  flashOrderOvertime = 2;
  int64  normalOrderOvertime = 3;
  int64    confirmOvertime = 4;
  int64  finishOvertime = 5;
  int64    commentOvertime = 6;
}

message OrderSettingAddResp {
  string pong = 1;
}

message OrderSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderSettingListData{
  int32  id = 1;
  int32  flashOrderOvertime = 2;
  int32  normalOrderOvertime = 3;
  int32    confirmOvertime = 4;
  int32  finishOvertime = 5;
  int32    commentOvertime = 6;
}

message OrderSettingListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  OrderSettingListData data = 6;
  bool success = 7;
}

message OrderSettingUpdateReq {
  int64  id = 1;
  int64  flashOrderOvertime = 2;
  int64  normalOrderOvertime = 3;
  int64    confirmOvertime = 4;
  int64  FinishOvertime = 5;
  int64    commentOvertime = 6;
}

message OrderSettingUpdateResp {
  string pong = 1;
}

message OrderSettingDeleteReq {
  int64 id = 1;
}

message OrderSettingDeleteResp {
  string pong = 1;
}

service Oms {
  rpc OrderAdd(OrderAddReq) returns(OrderAddResp){
    option (google.api.http) = {
      post: "/api/order/order/add"
      body: "*"
    };
  }
  rpc OrderList(OrderListReq) returns(OrderListResp){
    option (google.api.http) = {
      post: "/api/order/order/list"
      body: "*"
    };
  }
  rpc OrderUpdate(OrderUpdateReq) returns(OrderUpdateResp){
    option (google.api.http) = {
      post: "/api/order/order/update"
      body: "*"
    };
  }
  rpc OrderDelete(OrderDeleteReq) returns(OrderDeleteResp){
    option (google.api.http) = {
      post: "/api/order/order/delete"
      body: "*"
    };
  }

  rpc CartItemAdd(CartItemAddReq) returns(CartItemAddResp){
    option (google.api.http) = {
      post: "/api/order/cart/add"
      body: "*"
    };
  }
  rpc CartItemList(CartItemListReq) returns(CartItemListResp){
    option (google.api.http) = {
      post: "/api/order/cart/list"
      body: "*"
    };
  }
  rpc CartItemUpdate(CartItemUpdateReq) returns(CartItemUpdateResp){
    option (google.api.http) = {
      post: "/api/order/cart/update"
      body: "*"
    };
  }
  rpc CartItemDelete(CartItemDeleteReq) returns(CartItemDeleteResp){
    option (google.api.http) = {
      post: "/api/order/cart/delete"
      body: "*"
    };
  }

  rpc CompanyAddressAdd(CompanyAddressAddReq) returns(CompanyAddressAddResp){
    option (google.api.http) = {
      post: "/api/order/compayaddress/add"
      body: "*"
    };
  }
  rpc CompanyAddressList(CompanyAddressListReq) returns(CompanyAddressListResp){
    option (google.api.http) = {
      post: "/api/order/compayaddress/list"
      body: "*"
    };
  }
  rpc CompanyAddressUpdate(CompanyAddressUpdateReq) returns(CompanyAddressUpdateResp){
    option (google.api.http) = {
      post: "/api/order/compayaddress/update"
      body: "*"
    };
  }
  rpc CompanyAddressDelete(CompanyAddressDeleteReq) returns(CompanyAddressDeleteResp){
    option (google.api.http) = {
      post: "/api/order/compayaddress/delete"
      body: "*"
    };
  }

  rpc OrderOperateHistoryAdd(OrderOperateHistoryAddReq) returns(OrderOperateHistoryAddResp){
    option (google.api.http) = {
      post: "/api/order/operatehistory/add"
      body: "*"
    };
  }
  rpc OrderOperateHistoryList(OrderOperateHistoryListReq) returns(OrderOperateHistoryListResp){
    option (google.api.http) = {
      post: "/api/order/operatehistory/list"
      body: "*"
    };
  }
  rpc OrderOperateHistoryUpdate(OrderOperateHistoryUpdateReq) returns(OrderOperateHistoryUpdateResp){
    option (google.api.http) = {
      post: "/api/order/operatehistory/update"
      body: "*"
    };
  }
  rpc OrderOperateHistoryDelete(OrderOperateHistoryDeleteReq) returns(OrderOperateHistoryDeleteResp){
    option (google.api.http) = {
      post: "/api/order/operatehistory/delete"
      body: "*"
    };
  }

  rpc OrderReturnApplyAdd(OrderReturnApplyAddReq) returns(OrderReturnApplyAddResp){
    option (google.api.http) = {
      post: "/api/order/returnapply/add"
      body: "*"
    };
  }
  rpc OrderReturnApplyList(OrderReturnApplyListReq) returns(OrderReturnApplyListResp){
    option (google.api.http) = {
      post: "/api/order/returnapply/list"
      body: "*"
    };
  }
  rpc OrderReturnApplyUpdate(OrderReturnApplyUpdateReq) returns(OrderReturnApplyUpdateResp){
    option (google.api.http) = {
      post: "/api/order/returnapply/update"
      body: "*"
    };
  }
  rpc OrderReturnApplyDelete(OrderReturnApplyDeleteReq) returns(OrderReturnApplyDeleteResp){
    option (google.api.http) = {
      post: "/api/order/returnapply/delete"
      body: "*"
    };
  }

  rpc OrderReturnReasonAdd(OrderReturnReasonAddReq) returns(OrderReturnReasonAddResp){
    option (google.api.http) = {
      post: "/api/order/returnreason/add"
      body: "*"
    };
  }
  rpc OrderReturnReasonList(OrderReturnReasonListReq) returns(OrderReturnReasonListResp){
    option (google.api.http) = {
      post: "/api/order/returnreason/list"
      body: "*"
    };
  }
  rpc OrderReturnReasonUpdate(OrderReturnReasonUpdateReq) returns(OrderReturnReasonUpdateResp){
    option (google.api.http) = {
      post: "/api/order/returnreason/update"
      body: "*"
    };
  }
  rpc OrderReturnReasonDelete(OrderReturnReasonDeleteReq) returns(OrderReturnReasonDeleteResp){
    option (google.api.http) = {
      post: "/api/order/returnreason/delete"
      body: "*"
    };
  }

  rpc OrderSettingAdd(OrderSettingAddReq) returns(OrderSettingAddResp){
    option (google.api.http) = {
      post: "/api/order/setting/add"
      body: "*"
    };
  }
  rpc OrderSettingList(OrderSettingListReq) returns(OrderSettingListResp){
    option (google.api.http) = {
      post: "/api/order/setting/list"
      body: "*"
    };
  }
  rpc OrderSettingUpdate(OrderSettingUpdateReq) returns(OrderSettingUpdateResp){
    option (google.api.http) = {
      post: "/api/order/setting/update"
      body: "*"
    };
  }
  rpc OrderSettingDelete(OrderSettingDeleteReq) returns(OrderSettingDeleteResp){
    option (google.api.http) = {
      post: "/api/order/setting/delete"
      body: "*"
    };
  }
}
